<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:background="@color/colorPrimaryDark"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity"

    >


    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:maxHeight="200sp"
        android:textColor="@color/specialFnct"
        android:textSize="55sp"


        android:typeface="normal"
        app:fontFamily="serif" />

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:maxHeight="150sp"
        android:textColor="@color/specialFnct"
        android:textSize="45sp"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="@string/square"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="@string/button_sqrt"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/AC"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="156sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:background="#d53a17"
            android:minHeight="50dp"
            android:text="AC"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:visibility="visible" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="@string/button_pi"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="@string/button_percentage"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="@string/button_del"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:background="@color/colorButtons"
            android:minHeight="50dp"
            android:text="@string/button_division"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/but_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="7"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="8"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="9"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:background="@color/colorButtons"
            android:minHeight="50dp"
            android:text="@string/button_mult"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/but_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="4"
            android:textSize="30dp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/but_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"


            android:text="5"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="6"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:background="@color/colorButtons"
            android:minHeight="50dp"
            android:text="-"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/but_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="2"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="3"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:background="@color/colorButtons"
            android:minHeight="50dp"
            android:text="+"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/but_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="0"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="."
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@android:color/holo_orange_light"
            android:minHeight="50dp"
            android:text="@string/answer"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:background="@color/colorButtons"
            android:minHeight="50dp"
            android:text="@string/button_equal"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>